--- a/packages/vue-mention/package.json
+++ b/packages/vue-mention/package.json
@@ -43,8 +43,8 @@
     "access": "public"
   },
   "dependencies": {
-    "textarea-caret": "^3.1.0",
-    "floating-vue": "^2.0.0-beta.1"
+    "floating-vue": "^2.0.0-beta.6",
+    "textarea-caret": "^3.1.0"
   },
   "peerDependencies": {
     "vue": "^3.2"
@@ -52,9 +52,10 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
+    "@types/textarea-caret": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "@vitejs/plugin-vue": "^2.0.1",
+    "@vitejs/plugin-vue": "^2.2.0",
     "@vue/eslint-config-standard": "^5.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "autoprefixer": "^9.7.5",
@@ -69,7 +70,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^8.2.0",
     "typescript": "^4.5.4",
-    "vite": "^2.7.10",
+    "vite": "^2.8.3",
     "vue": "^3.2.26",
     "vue-typegen": "^0.1.1"
   },
