--- a/packages/vue-mention/tsconfig.json
+++ b/packages/vue-mention/tsconfig.json
@@ -11,7 +11,8 @@
     ],
     "jsx": "preserve",
     "outDir": "dist",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src/**/*.ts",
