--- a/package.json
+++ b/package.json
@@ -1,17 +1,87 @@
 {
-  "name": "vue-mention-monorepo",
-  "version": "2.0.0-alpha.3",
-  "private": true,
-  "workspaces": [
-    "packages/*"
+  "name": "vue-mention",
+  "description": "Mention popper for input and textarea",
+  "version": "2.0.0-alpha.4",
+  "author": {
+    "name": "Guillaume Chau",
+    "email": "guillaume.b.chau@gmail.com"
+  },
+  "keywords": [
+    "vue",
+    "vuejs",
+    "plugin",
+    "mention",
+    "popper"
   ],
+  "license": "MIT",
+  "main": "dist/vue-mention.umd.js",
+  "module": "dist/vue-mention.es.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/vue-mention.es.js",
+      "require": "./dist/vue-mention.umd.js"
+    }
+  },
   "scripts": {
-    "build": "lerna run build",
-    "lint": "lerna run lint",
-    "release": "yarn run lint && lerna publish --dist-tag next"
+    "dev": "cross-env NODE_ENV=development vite build --watch",
+    "build": "cross-env NODE_ENV=production vite build && tsc -d --emitDeclarationOnly && vue-typegen gen -s src -o dist",
+    "prepublishOnly": "npm run lint && npm run build && npm run test",
+    "lint": "eslint --ext .ts,.js,.vue src",
+    "test": "cd ../test-e2e && yarn run test:e2e:run",
+    "postinstall": "build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Akryum/vue-mention.git",
+    "directory": "packages/vue-mention"
+  },
+  "bugs": {
+    "url": "https://github.com/Akryum/vue-mention/issues"
+  },
+  "homepage": "https://github.com/Akryum/vue-mention#readme",
+  "publishConfig": {
+    "access": "public"
+  },
+  "dependencies": {
+    "floating-vue": "^2.0.0-beta.6",
+    "textarea-caret": "^3.1.0"
+  },
+  "peerDependencies": {
+    "vue": "^3.2"
   },
   "devDependencies": {
-    "lerna": "^3.20.2"
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@types/textarea-caret": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "@vitejs/plugin-vue": "^2.2.0",
+    "@vue/eslint-config-standard": "^5.0.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "autoprefixer": "^9.7.5",
+    "clean-css": "^4.1.8",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.24.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "typescript": "^4.5.4",
+    "vite": "^2.8.3",
+    "vue": "^3.2.26",
+    "vue-typegen": "^0.1.1"
   },
-  "packageManager": "yarn@3.1.1"
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie > 0",
+    "not ie_mob > 0"
+  ],
+  "files": [
+    "dist"
+  ]
 }
