--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "prepublishOnly": "npm run lint && npm run build && npm run test",
     "lint": "eslint --ext .ts,.js,.vue src",
     "test": "cd ../test-e2e && yarn run test:e2e:run",
-    "postinstall": "build"
+    "postinstall": "yarn build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Akryum/vue-mention.git",
+    "url": "git+https://github.com/jsnoriegam/vue-mention.git",
     "directory": "packages/vue-mention"
   },
   "bugs": {
